[package]
name = "oxidicom"
description = "DICOM receiver for ChRIS backend"
version = "3.0.0-a1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicom = "0.8.1"
dicom-ul = { version = "0.8.1", features = [ "async" ]}
thiserror = "2.0.12"
camino = { version = "1.1.9", features = ["serde1"] }
fs-err = { version = "3.1.0", features = ["tokio"] }
serde = { version = "1.0.219", features = ["derive"] }
seahash = { version = "4.1.0", features = ["use_std"] }
regex = "1.11.1"
opentelemetry = { version = "0.28.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", features = ["trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.28.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
aliri_braid = "0.4.0"
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }
futures = "0.3.31"
time = { version = "0.3.39", features = ["macros", "parsing"] }
ulid = "1.2.0"
figment = { version = "0.10.19", features = ["env"] }
celery = "0.5.5"
humantime-serde = "1.1.1"
async-nats = "0.39.0"
bytes = "1.10.1"
either = { version = "1.15.0", features = ["use_std"] }

[dev-dependencies]
rstest = "0.25.0"
reqwest = { version = "0.12.14", features = ["json"], default-features = false }
tempfile = "3.12.0"
names = "0.14.0"
serde_json = "1.0.128"
async-walkdir = "2.0.0"
pathdiff = { version = "0.2.1", features = ["camino"] }
pretty_assertions = "1.4.0"
