[package]
name = "oxidicom"
description = "DICOM receiver for ChRIS backend"
version = "4.0.0-alpha.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dicom = "0.8.2"
dicom-ul = { version = "0.8.2", features = [ "async" ]}
thiserror = "2.0.16"
camino = { version = "1.2.0", features = ["serde1"] }
fs-err = { version = "3.1.2", features = ["tokio"] }
serde = { version = "1.0.226", features = ["derive"] }
seahash = { version = "4.1.0", features = ["use_std"] }
regex = "1.11.2"
opentelemetry = { version = "0.30.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
aliri_braid = "0.4.0"
anyhow = "1.0.100"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
time = { version = "0.3.44", features = ["macros", "parsing"] }
ulid = "1.2.1"
figment = { version = "0.10.19", features = ["env"] }
celery = "0.5.5"
humantime-serde = "1.1.1"
async-nats = "0.43.0"
bytes = "1.10.1"
either = { version = "1.15.0", features = ["use_std"] }

[dev-dependencies]
rstest = "0.26.1"
reqwest = { version = "0.12.23", features = ["json"], default-features = false }
tempfile = "3.23.0"
names = "0.14.0"
serde_json = "1.0.145"
async-walkdir = "2.1.0"
pathdiff = { version = "0.2.3", features = ["camino"] }
pretty_assertions = "1.4.1"
